--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
   </nav>
   <div class="container serchContainer">
-    <div class="serch card card-body">
+    <div class="search card card-body">
       <h1>Search GitHub Users</h1>
       <p class="lead">Enter a user to fetch a user profile and repos from GitHub</p>
       <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username...">
